--- a/prog6212-part3-ST10456157/prog6212-part3-ST10456157.csproj
+++ b/prog6212-part3-ST10456157/prog6212-part3-ST10456157.csproj
@@ -26,5 +26,9 @@
 		<PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
+	</ItemGroup>
+
 </Project>
 
